Erro de CORS Arrumado

--- a/APIEdux/APIEdux.csproj
+++ b/APIEdux/APIEdux.csproj
@@ -3,9 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
-	<PropertyGroup>
-		<GenerateDocumentationFile>true</GenerateDocumentationFile>
-		<NoWarn>$(NoWarn);1591</NoWarn>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+		<DocumentationFile>C:\Users\João Pedro\Documents\SENAI\API\APIEdux/APIEdux\APIEdux.xml</DocumentationFile>
 	</PropertyGroup>
 	<ItemGroup>
 	  <Compile Remove="Migrations\20201025031316_AlterTableDica.cs" />
